Migrar servidor a Java JDBC sin Node