@@ -6,6 +6,6 @@ if errorlevel 1 (
 )
 
 if not exist out mkdir out
-javac -encoding UTF-8 -d out Cliente.java Vehiculo.java GeneradorActa.java
+javac --add-modules jdk.httpserver -encoding UTF-8 -d out Cliente.java Vehiculo.java GeneradorActa.java ConfiguracionBD.java JsonUtil.java ServidorJava.java
 if errorlevel 1 exit /b 1
 echo Java compilado en la carpeta out.
